Editorial box tweaks

--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -353,7 +353,7 @@
     font-weight:        $font-bold;
 }
 .authorNameBox {
-    color:              $col-twitShare;
+    color:              $col-rating;
 }
 .articleTitleBox {
   padding-left:         0;
