--- a/mainsite/templates/include_jpt_footer.html
+++ b/mainsite/templates/include_jpt_footer.html
@@ -26,7 +26,7 @@
                     <div class="col-md-2">
                         <h3>DEPARTMENTS</h3>
                         <p><a href="https://www.spe.org/en/jpt/guest-editorial/">Guest Editorial</a></p>
-                        <p><a href="https://www.spe.org/en/jpt/management/">Managment</a></p>
+                        <p><a href="https://www.spe.org/en/jpt/management/">Management</a></p>
                         <p><a href="https://www.spe.org/en/jpt/ep-notes/">E&P Notes</a></p>
                         <p><a href="https://www.spe.org/en/jpt/conference-coverage/">Conference Coverage</a></p>
                         <p><a href="https://www.spe.org/en/jpt/people/">People</a></p>
@@ -45,7 +45,7 @@
                         <p><a href="https://www.spe.org/en/jpt/about-jpt/">About</a></p>
                         <p><a href="http://www.spe.org/contact/">Contact</a></p>
                         <p><a href="http://www.spe.org/publications/subscribe.php">Subscribe</a></p>
-                        <p><a href="">Advertise</a></p>
+                        <p><a href="https://www.spe.org/en/jpt/advertise/">Advertise</a></p>
                     </div>
                     <div class="col-md-2">
                         <h3>SPE</h3>
