--- a/spe_blog/templates/spe_blog/plugins/brief_list_pics.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_list_pics.html
@@ -8,9 +8,9 @@
         {% if isbrief == True %}
             <div class="spacer10px"></div>
         {% else %}
-            <div class="col-xs-12 sideListBoxTitle">
-                <span class="boxTitleText col-xs-12">What's Trending Now</span>
-            </div>
+{#            <div class="col-xs-12 sideListBoxTitle">#}
+{#                <span class="boxTitleText col-xs-12">What's Trending Now</span>#}
+{#            </div>#}
         {% endif %}
     {% elif pubcode == "JPT" %}
 {#        {% if boxtitle != null %}#}
