--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -1127,7 +1127,7 @@ table {
     font-size: 20px;
     font-weight: 700; }
   .tile-editorial .excerpt {
-    font-size: 12px; }
+    font-size: 15px; }
   .tile-editorial .dottedspacer {
     margin-bottom: 10px;
     border-bottom: 2px dotted white;
@@ -1136,7 +1136,7 @@ table {
     padding: 0 5px 0 0;
     margin: 0; }
   .tile-editorial .authorBio {
-    font-size: 10px; }
+    font-size: 12px; }
 
 .tile-editorial-fixed {
   height: 400px; }
@@ -1155,6 +1155,9 @@ table {
 
 .editorial-padding {
   padding: 5px; }
+
+.editorial-contentbox {
+  padding: 0 10px 0 10px; }
 
 .tile-textbelow {
   padding: 0 15px 20px 0; }
