--- a/spe_blog/templates/spe_blog/plugins/article_editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/article_editorial.html
@@ -4,13 +4,26 @@
     {% if forloop.first %}
         <a href="{{ article.get_absolute_url }}">
         <div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }};">
-            <div class="col-xs-12 title1">{{ article.editorial_title }}</div>
+        {% if article.publication.code == "JPT" %}
+            <div class="col-xs-12 sideListBoxTitle">
+                <span class="boxTitleText col-xs-12" style="background-color:#e51837;">{{ article.editorial_title }}</span>
+            </div>
+            <div class="editorial-contentbox row">
+                <div class="col-xs-12 title2">{{ article.title }}</div>
+                <div class="col-xs-12 excerpt">{{ article.teaser }}</div>
+                <div class="col-xs-12 dottedspacer">&nbsp;</div>
+                <div class="col-xs-4 authorImg"><img class="img-responsive" src={{article.author_picture.url}}></div>
+                <div class="col-xs-8 authorBio">{{ article.author_bio | safe }}</div>
+            </div>
+        {% else %}
+            <div class="col-xs-12 title1">{{ article.editorial_title }} {{ article.publication.code }}</div>
             <div class="col-xs-12 dottedspacer">&nbsp;</div>
             <div class="col-xs-12 title2">{{ article.title }}</div>
             <div class="col-xs-12 excerpt">{{ article.teaser }}</div>
             <div class="col-xs-12 dottedspacer">&nbsp;</div>
             <div class="col-xs-4 authorImg"><img class="img-responsive" src={{article.author_picture.url}}></div>
             <div class="col-xs-8 authorBio">{{ article.author_bio | safe }}</div>
+        {% endif %}
         </div>
         </a>
         {% if show_all_url and show_all_text %}
