--- a/spe_blog/templates/spe_blog/plugins/tech_focus_main.html
+++ b/spe_blog/templates/spe_blog/plugins/tech_focus_main.html
@@ -46,4 +46,10 @@
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
 
+    <!-- SHOW ALL BEGIN -->
+    {% if show_all_url and show_all_text %}
+                <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+    {% endif %}
+    <!-- SHOW ALL END -->
+
 </div>
