--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -208,9 +208,9 @@
 .sideListItem-borwht {
   border-bottom:        1px solid $col-white;
 }
-.sideListTitle {
+.sideListTitle, .sideListTitle2  {
   font-size:            15px;
-  font-weight:          $font-bold;
+  font-weight:          $font-regular;
   margin-top:           5px;
   padding:              5px 0;
 
