--- a/mainsite/templates/jpt_home.html
+++ b/mainsite/templates/jpt_home.html
@@ -35,4 +35,11 @@
 
 {#    {% include 'include_hide_ads.html' %}#}
 
+    <!-- **** -->
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+            $('.tile-white img').addClass('img-responsive');
+        });
+    </script>
+
 {% endblock content %}
