--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -41,3 +41,12 @@
         {{ block.super }}
     {% endwith %}
 {% endblock content_footer %}
+{##}
+{#{% addtoblock "js" %}#}
+{#    <!-- **** -->#}
+{#    <script type="text/javascript" charset="utf-8">#}
+{#        $( document ).ready(function() {#}
+{#            $('.tile-white img').addClass('img-responsive');#}
+{#        });#}
+{#    </script>#}
+{#{%  endaddtoblock %}#}
