jpt footer quick fix

--- a/mainsite/templates/include_jpt_footer.html
+++ b/mainsite/templates/include_jpt_footer.html
@@ -34,6 +34,7 @@
                     </div>
                     <div class="col-md-2">
                         <h3>&nbsp;</h3>
+                        <p><a href="https://www.spe.org/en/jpt/latest-news/">Latest News</a></p>
                         <p><a href="https://www.spe.org/en/jpt/talent-technology/">Talent & Technology</a></p>
                         <p><a href="https://www.spe.org/en/jpt/beyond-headlines/">Beyond the Headlines</a></p>
                         <p><a href="https://www.spe.org/en/jpt/presidents-column/">President's Column</a></p>
