font sizes for promotion list.

--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -523,6 +523,6 @@
 .bloglist {
   .sideListTitle {
     //font-size:    20px;
-    font-weight:  $font-bold;
+    font-weight:  $font-regular;
   }
 }
