--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -77,7 +77,7 @@ a {
 }
 .sideListTitle {
   font-size:            14px;
-  //font-weight:          $font-bold;
+  font-weight:          $font-regular;
   //line-height:          18px;
 
   a {
