--- a/spe_promotions/templates/spe_promotions/plugins/carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/carousel.html
@@ -46,6 +46,12 @@
             {% if promo.sponsored %}
                 <p class="sponsored">SPONSORED CONTENT</p>
             {% endif %}
+                              <p class="sideListDateTWA" style="color:#FDD017">
+                                    {% if promo.event_text_date %}
+                                        {{ promo.event_text_date }}
+                                    {% else %}
+                                        {{ promo.event_start_date|date:"d F Y" }}
+                                    {% endif %} - {{ promo.event_location }}</p>
                               <h4>{{ promo.teaser | safe }}</h4>
                           </div>
                       </a>
