--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -337,7 +337,6 @@
     padding:  0;
     margin:   0;
   }
-
   .reTitle {
     font-size:    16px;
     font-weight:  $font-bold;
@@ -365,17 +364,12 @@
   padding-right:        0;
 
   img {
-    //max-width:          500px;
-    //margin:             0 auto;
+
   }
 }
-
 .articleBodyText {
   img {
-    margin:             0 10px 0 10px;
-    //margin:             0 auto;
-    //min-width:          100px;
-    //height:             auto;
+    margin:             0 auto;
   }
 }
 .articleShares {
