Regional briefs edit

--- a/spe_blog/templates/spe_blog/regional_briefs.html
+++ b/spe_blog/templates/spe_blog/regional_briefs.html
@@ -24,10 +24,16 @@
             column-width: 21.5em;
         }
         /*remove standard list and bullet formatting from ul*/
+
+        .columns p {
+            font-size: 1.25em;
+        }
         .columns h2 {
             border-top: 1px solid lightgrey;
-            padding-top: 10px;
+            padding: 10px;
             margin-top: 0;
+            background-color: lightgrey;
+            color:  white;
         }
         .columns ul
         {
