--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -20,7 +20,7 @@
                         {% if pubcode != "TWA" and article.is_readable == True %}{# check if the article is locked or not and indicate #}
 {#                        {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
 {#                        {% if article.free %}#}
-                            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
+{#                            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>#}
 {#                        {% else %}#}
 {#                            <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is for registered users">&nbsp;<i class="fa fa-lock"></i></span>#}
                         {% endif %}
