--- a/spe_blog/templates/spe_blog/plugins/image_left.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left.html
@@ -15,11 +15,11 @@
                 <div class="col-sm-12">
             {% endif %}
                 <span class="pub-date">{{ article.date|date:"d F Y" }}
-                {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
-                    <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
-                {% else %}
-                    <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is for registered users">&nbsp;<i class="fa fa-lock"></i></span>
-                {% endif %}
+{#                {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
+{#                    <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>#}
+{#                {% else %}#}
+{#                    <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is for registered users">&nbsp;<i class="fa fa-lock"></i></span>#}
+{#                {% endif %}#}
                 </span>
                 <h3>{{ article.title }}</h3>
                 {% if article.sponsored %}
