--- a/spe_blog/templates/spe_blog/plugins/side_list_back.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list_back.html
@@ -36,13 +36,13 @@
             {% endif %}
 
                 <span class="sideListDateTWA">{{ article.date|date:"d F Y" }}</span>
-            {% if pubcode == "TWA" %}
-
-            {% else %}
-                {% if article.is_readable == True %}
-                    <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
-                {% endif %}
-            {% endif %}
+{#            {% if pubcode == "TWA" %}#}
+{##}
+{#            {% else %}#}
+{#                {% if article.is_readable == True %}#}
+{#                    <span class="pipe">| </span><span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>#}
+{#                {% endif %}#}
+{#            {% endif %}#}
 
                 </div>
             </div>
