Removed hypen separator from carousel when used for special promotion

--- a/spe_promotions/templates/spe_promotions/plugins/carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/carousel.html
@@ -34,9 +34,9 @@
                                         {% if promo.event_start_date %}
                                             {{ promo.event_start_date|date:"d F Y" }}
                                         {% endif %}
-                                    {% endif %} -
+                                    {% endif %}
                                     {% if promo.event_location %}
-                                        {{ promo.event_location }}
+                                        - {{ promo.event_location }}
                                     {% endif %}
                                 </p>
                 {#                <span class="sideListDateTWA"></span>#}
