--- a/mainsite/templates/include_jpt_footer.html
+++ b/mainsite/templates/include_jpt_footer.html
@@ -3,7 +3,7 @@
     <div class="footerUpper row dontPrintMe">
         <div class="container-fluid">
             <div class="row">
-                <div class="footerULeft col-md-2">
+                <div class="footerULeft hidden-xs hidden-sm col-md-2">
                     <img src="{% static 'jpt/img/JPT_wText_Horizontal.svg' %}" class="footerLogo">
                     <ul class="footerSocial">
                         <li><a href="https://www.facebook.com/spemembers" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -13,8 +13,11 @@
                     </ul>
                     <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers<br>All Rights Reserved.</p>
                 </div>
-                <div class="footerURight col-md-10">
-                    <div class="col-md-2 col-md-offset-1">
+
+
+
+                <div class="footerURight col-xs-12 col-md-10">
+                    <div class="col-xs-6 col-md-2 col-md-offset-1">
 {#                    <div class="col-md-2 padL10">#}
                         <h3>MAIN</h3>
                         <p><a href="https://www.spe.org/en/jpt/topics/">Topics</a></p>
@@ -23,7 +26,7 @@
                         <p><a href="https://www.spe.org/en/jpt/technical-papers/">Papers</a></p>
                         <p><a href="https://www.spe.org/en/jpt/archive/">Archive</a></p>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-xs-6 col-md-2">
                         <h3>DEPARTMENTS</h3>
                         <p><a href="https://www.spe.org/en/jpt/guest-editorial/">Guest Editorial</a></p>
                         <p><a href="https://www.spe.org/en/jpt/management/">Management</a></p>
@@ -32,8 +35,8 @@
                         <p><a href="https://www.spe.org/en/jpt/people/">People</a></p>
                         <p><a href="https://www.spe.org/en/jpt/technology-applications/">Technology Applications</a></p>
                     </div>
-                    <div class="col-md-2">
-                        <h3>&nbsp;</h3>
+                    <div class="col-xs-6 col-md-2 col-xs-offset-6 col-md-offset-0">
+                        <h3 class="hidden-xs hidden-sm">&nbsp;</h3>
                         <p><a href="https://www.spe.org/en/jpt/latest-news/">Latest News</a></p>
                         <p><a href="https://www.spe.org/en/jpt/talent-technology/">Talent & Technology</a></p>
                         <p><a href="https://www.spe.org/en/jpt/beyond-headlines/">Beyond the Headlines</a></p>
@@ -41,14 +44,14 @@
                         <p><a href="https://www.spe.org/en/jpt/editor-comments/">Comments</a></p>
                         <p><a href="https://www.spe.org/en/jpt/spe-member-news/">SPE News</a></p>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-xs-6 col-md-2">
                         <h3>UTILITY</h3>
                         <p><a href="https://www.spe.org/en/jpt/about-jpt/">About</a></p>
                         <p><a href="http://www.spe.org/contact/">Contact</a></p>
                         <p><a href="http://www.spe.org/publications/subscribe.php">Subscribe</a></p>
                         <p><a href="https://www.spe.org/en/jpt/advertise/">Advertise</a></p>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-xs-6 col-md-2">
                         <h3>SPE</h3>
                         <p><a href="http://www.spe.org/">SPE</a></p>
                         <p><a href="http://www.spe.org/jpt/">JPT</a></p>
@@ -57,6 +60,21 @@
                         <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
                         <p><a href="https://www.spe.org/en/twa/twa-main-page/">The Way Ahead</a></p>
                     </div>
+                </div>
+
+
+
+                <div class="footerULeft col-xs-12 visible-xs-* visible-sm-* hidden-md hidden-lg">
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                    <img src="{% static 'jpt/img/JPT_wText_Horizontal.svg' %}" class="footerLogo">
+                    <ul class="footerSocial">
+                        <li><a href="https://www.facebook.com/spemembers" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/SPEtweets" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/groups/57660/profile"><i class="fa fa-linkedin" target="_blank"></i></a></li>
+                        <li><a href="https://www.youtube.com/user/2012SPE"><i class="fa fa-youtube-play" target="_blank"></i></a></li>
+                    </ul>
+                    <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers<br>All Rights Reserved.</p>
                 </div>
             </div>
         </div>
