--- a/mainsite/templates/include_jpt_footer.html
+++ b/mainsite/templates/include_jpt_footer.html
@@ -64,7 +64,7 @@
 
 
 
-                <div class="footerULeft col-xs-12 visible-xs-* visible-sm-* hidden-md hidden-lg">
+                <div class="footerULeft col-xs-12 col-sm-4 col-sm-offset-4 visible-xs-* visible-sm-* hidden-md hidden-lg">
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
                     <img src="{% static 'jpt/img/JPT_wText_Horizontal.svg' %}" class="footerLogo">
