--- a/spe_blog/templates/spe_blog/plugins/article_editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/article_editorial.html
@@ -16,7 +16,7 @@
                 <div class="col-xs-8 authorBio">{{ article.author_bio | safe }}</div>
             </div>
         {% else %}
-            <div class="col-xs-12 title1">{{ article.editorial_title }} {{ article.publication.code }}</div>
+            <div class="col-xs-12 title1">{{ article.editorial_title }}</div>
             <div class="col-xs-12 dottedspacer">&nbsp;</div>
             <div class="col-xs-12 title2">{{ article.title }}</div>
             <div class="col-xs-12 excerpt">{{ article.teaser }}</div>
