--- a/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
+++ b/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 <span class="sideListDateTWA">
                     {% if promo.event_text_date %}
-                        {{ promo.event_text_date }}
+                        {{ promo.event_text_date }} {{ promo.event_text_after }}
                     {% else %}
                         {{ promo.event_start_date|date:"d F Y" }}
                     {% endif %} - {{ promo.event_location }}</span>
