--- a/spe_promotions/templates/spe_promotions/plugins/carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/carousel.html
@@ -29,7 +29,7 @@
             {% endif %}
                                 <p class="sideListDateTWA" style="color:#FDD017">
                                     {% if promo.event_text_date %}
-                                        {{ promo.event_text_date }}
+                                        {{ promo.event_text_date }} {{ promo.event_text_after }}
                                     {% else %}
                                         {% if promo.event_start_date %}
                                             {{ promo.event_start_date|date:"d F Y" }}
@@ -54,7 +54,7 @@
             {% endif %}
                               <p class="sideListDateTWA" style="color:#FDD017">
                                     {% if promo.event_text_date %}
-                                        {{ promo.event_text_date }}
+                                        {{ promo.event_text_date }} {{ promo.event_text_after }}
                                     {% else %}
                                             {{ promo.event_start_date|date:"d F Y" }}
                                     {% endif %} - {{ promo.event_location }}</p>
