--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -217,7 +217,7 @@
 {#                    window.location.replace("http://stackoverflow.com");#}
 
                     // similar behavior as clicking on a link
-                    window.location.href = "https://www.spe.org/en/print-article/?art={{ article.id }}";
+                    window.location.href = "/en/print-article/?art={{ article.id }}";
                     return false;
                 }
             });
